# github-chatbot

./: .env  .gitignore  README.md  backup.txt  llm-github-chatbot.ipynb  pyproject.toml  readme.md  requirements.txt
.ipynb_checkpoints/: llm-github-chatbot-checkpoint.ipynb
data/: LetsTrie_Grind-75_commits.csv  OptimalBits_bull_pr_conversations.csv  OptimalBits_bull_pr_review_comments.csv  OptimalBits_bull_pull_requests.csv  freeCodeCamp_freeCodeCamp_pr_conversations.csv  freeCodeCamp_freeCodeCamp_pr_review_comments.csv  freeCodeCamp_freeCodeCamp_pull_requests.csv  jonogon_jonogon-mono_commits.csv  jonogon_jonogon-mono_pull_requests.csv  midday-ai_midday_commits.csv  midday-ai_v1_commits.csv
src/: GithubAgent.py  GithubUrlManager.py  agent.py  main.py
src/helpers/: chat.py  core.py  fetch_github_count.py  fetch_github_data.py  get_commits.py  get_pull_requests.py  get_repository.py
src/tools/: __init__.py  github_tool.py  repository_report_tool.py
src/utils/: datetime.py  parser_utils.py  prompt_utils.py  setup_logger.py
